fix: dark mode and page title

--- a/styles/dark.scss
+++ b/styles/dark.scss
@@ -11,14 +11,5 @@
 
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 
-  body {
-    color: white;
-    background: black;
-  }
-}
 
